--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo Installing dependencies...
+      - echo "Installing dependencies..."
       - echo "DOCKERHUB_USERNAME is: $DOCKERHUB_USERNAME"
       - echo "DOCKERHUB_PASSWORD is: $DOCKERHUB_PASSWORD"
-      - echo something new
+      - echo "something new"
