--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,15 @@
 version: 0.2
 
+env:
+  secrets-manager:
+    DOCKERHUB_USERNAME: "my-dockerhub-creds:username"
+    DOCKERHUB_PASSWORD: "my-dockerhub-creds:password"
+
 phases:
   install:
+    runtime-versions:
+      nodejs: 18
     commands:
-      - echo "Logging Docker credentials"
-      - echo "Username: $username"
-      - echo "Password: $password"
+      - echo "Using secrets from Secrets Manager"
+      - echo "Dockerhub Username: $DOCKERHUB_USERNAME"
+      # Be careful: don't echo the password in real logs!
