--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,5 +11,5 @@ phases:
       nodejs: 18
     commands:
       - echo "Using secrets from Secrets Manager"
-      - echo "Dockerhub Username: $DOCKERHUB_USERNAME"
+      # - echo "Dockerhub Username: $DOCKERHUB_USERNAME"
       # Be careful: don't echo the password in real logs!
