--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,8 @@
 version: 0.2
 
-env:
-  secrets-manager:
-    DOCKERHUB_USERNAME: "my-dockerhub-creds:username"
-    DOCKERHUB_PASSWORD: "my-dockerhub-creds:password"
-
 phases:
   install:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo "Using secrets from Secrets Manager"
-      - echo "Dockerhub Username: $DOCKERHUB_USERNAME"
+      - echo $username
